# egcas-core

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LICENSE.md  README.md
egCAS/src/: CMakeLists.txt  create_deb_pkg.sh  formulagenerator.cpp  formulagenerator.h  main.cpp  mainwindow.cpp  mainwindow.h
egCAS/src/casKernel/: egckernelconn.cpp  egckernelconn.h  egcmaximaconn.cpp  egcmaximaconn.h
egCAS/src/casKernel/parser/: .gitignore  CMakeLists.txt  Egc.g4  abstractkernelparser.h  command.cpp  command.h  egc.g4  egckernelparser.cpp  egckernelparser.h  formulainterpreter.cpp  formulainterpreter.h  interpreter.cpp  interpreter.h  main.cpp  parser.y  restructparserprovider.cpp  restructparserprovider.h  scanner.h  scanner.l
egCAS/src/formula/: formulaitem.cpp  formulaitem.h
egCAS/src/logic/: worksheet.cpp  worksheet.h
egCAS/src/menu/: actionwrapper.cpp  actionwrapper.h  algebrasection.cpp  algebrasection.h  collapsablesectionwidget.cpp  collapsablesectionwidget.h  egcgraphicsview.cpp  egcgraphicsview.h  egclicenseinfo.cpp  egclicenseinfo.h  egclicenseinfo.ui  elementbar.cpp  elementbar.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mathelement.h  mathfont.cpp  mathfont.h  mathsection.cpp  mathsection.h  matrixbox.cpp  matrixbox.h  matrixbox.ui  precisionbox.cpp  precisionbox.h  resulttype.cpp  resulttype.h  richtexteditor.cpp  richtexteditor.h  textfont.cpp  textfont.h
egCAS/src/res/: Version  egcas.rc  ressources.qrc
egCAS/src/res/fnc/: ind.html  readme
egCAS/src/res/sound/: sound_origin.txt
egCAS/src/structural/: abstractserializer.h  egcbaseexpressionnode.h  egcbinaryexpressionnode.cpp  egcbinaryexpressionnode.h  egccontainernode.cpp  egccontainernode.h  egcemptyexpressionnode.cpp  egcemptyexpressionnode.h  egcentity.cpp  egcentity.h  egcexpressionnode.cpp  egcexpressionnode.h  egcexpressionnodecreator.cpp  egcexpressionnodecreator.h  egcformulaentity.cpp  egcformulaentity.h  egcformulaexpression.cpp  egcformulaexpression.h  egcnodecreator.cpp  egcnodecreator.cpp.in  egcnodecreator.h  egcnodes.h  egcnodes.h.in  egcnodes_gen.h  egcnumberexpressionnode.cpp  egcnumberexpressionnode.h  egcparenthesisexpressionnode.h  egcpixmapentity.cpp  egcpixmapentity.h  egcrootexpressionnode.cpp  egcrootexpressionnode.h  egctextentity.cpp  egctextentity.h  egcunaryexpressionnode.cpp  egcunaryexpressionnode.h  egcvariableexpressionnode.cpp  egcvariableexpressionnode.h
egCAS/src/structural/actions/: egcaction.h  egcactionmapper.cpp  egcactionmapper.h  egcoperations.h
egCAS/src/structural/concreteNodes/: egcalnumnode.cpp  egcalnumnode.h  egcbinemptynode.cpp  egcbinemptynode.h  egcconstantnode.cpp  egcconstantnode.h  egccrossproductnode.cpp  egccrossproductnode.h  egcdefinitionnode.cpp  egcdefinitionnode.h  egcdifferentialnode.cpp  egcdifferentialnode.h  egcdivisionnode.cpp  egcdivisionnode.h  egcequalnode.cpp  egcequalnode.h  egcexponentnode.cpp  egcexponentnode.h  egcfnccontainernode.cpp  egcfnccontainernode.h  egcfunctionnode.cpp  egcfunctionnode.h  egcintegralnode.cpp  egcintegralnode.h  egclognode.cpp  egclognode.h  egclparenthesisnode.cpp  egclparenthesisnode.h  egcmatrixnode.cpp  egcmatrixnode.h  egcminusnode.cpp  egcminusnode.h  egcmultiplicationnode.cpp  egcmultiplicationnode.h  egcnatlognode.cpp  egcnatlognode.h  egcnumberexpressionnode.cpp  egcnumberexpressionnode.h  egcnumbernode.cpp  egcnumbernode.h  (+18 more)
egCAS/src/structural/document/: egcabstractdocument.h  egccalculation.cpp  egccalculation.h  egcdocument.cpp  egcdocument.h
egCAS/src/structural/entities/: egcabstractentity.h  egcabstractentitylist.h  egcabstractformulaentity.h  egcabstractpixmapentity.h  egcabstracttextentity.h  egcentity.cpp  egcentity.h  egcentitylist.cpp  egcentitylist.h  egcformulaentity.cpp  egcformulaentity.h  egcpixmapentity.cpp  egcpixmapentity.h  egctextentity.cpp  egctextentity.h  formulamodificator.cpp  formulamodificator.h
egCAS/src/structural/entity_lists/: egcentitylist.cpp  egcentitylist.h
egCAS/src/structural/iterator/: egcabstractscrpositerator.h  egcexpressionnodeiterator.cpp  egcexpressionnodeiterator.h  egcnaturalnodeiterator.cpp  egcnaturalnodeiterator.h  egcnodeiterator.cpp  egcnodeiterator.h  egcscrpositerator.cpp  egcscrpositerator.h  egcstepnodeiterator.cpp  egcstepnodeiterator.h  (+2 more)
egCAS/src/types/: matrixdimension.h
egCAS/src/ui/: mainwindow.ui
egCAS/src/utils/: egcutfcodepoint.cpp  egcutfcodepoint.h
egCAS/src/view/: collapsablebuttonmatrix.cpp  collapsablebuttonmatrix.h  egcabstractformulaitem.h  egcabstractitem.cpp  egcabstractitem.h  egcabstractpixmapitem.h  egcabstracttextitem.h  egcasiteminterface.cpp  egcasiteminterface.h  egcasscene.cpp  egcasscene.h  egccrossitem.cpp  egccrossitem.h  egcformulaitem.cpp  egcformulaitem.h  egcitemtypes.h  egcpixmapitem.cpp  egcpixmapitem.h  egcscreenpos.cpp  egcscreenpos.h  egcsimpletextitem.cpp  egcsimpletextitem.h  egctextitem.cpp  egctextitem.h  egcworksheet.cpp  egcworksheet.h  formulaitem.cpp  formulaitem.h  grid.cpp  grid.h  resizehandle.cpp  resizehandle.h
egCAS/test/: .gitignore  CMakeLists.txt  error while calculating  test-executer.sh
egCAS/test/build-egcasTestStructure-Desktop_Qt_5_2_1_GCC_64bit-Debug/: .gitignore
egCAS/test/egcasPrintOpPrec/: CMakeLists.txt  tst_print_op_precedence.cpp
egCAS/test/egcasRearrangePrec/: CMakeLists.txt  tst_rearrange_precedence.cpp
egCAS/test/egcasTest/: egcasTest.pro
egCAS/test/egcasTestAdvancedTreeOps/: .gitignore  CMakeLists.txt  tst_egcas_advanced_tree_ops.cpp
egCAS/test/egcasTestCalculations/: CMakeLists.txt  tst_egcastest_calculations.cpp
egCAS/test/egcasTestParser/: CMakeLists.txt  tst_egcastest_parser.cpp
egCAS/test/egcasTestScreenIterators/: CMakeLists.txt  tst_egcastest_screen_iterators.cpp
egCAS/test/egcasTestStructure/: CMakeLists.txt  egcasTestStructure.pro  tst_egcastest_structural.cpp  tst_egcastest_structural.h  tst_egcastest_structure.cpp
egCAS/test/egcasTestUtf/: CMakeLists.txt  tst_egcastest_utf_encoding.cpp
egCAS/test/egcasTestView/: CMakeLists.txt  egcasTestView.pro  tst_egcastest_view.cpp
egCAS/test/serializer/: testfile.egc
(+77 files in other folders)
